# harness-sphere

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.example.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  deepseek-pr-review.yml  publish-crates.yml  release-pr.yml  release.yml
.specs/features/telemetry-core/: context.md  design.md  spec.md
.specs/project/: PROJECT.md  STATE.md
crates/collectors/: Cargo.toml
crates/collectors/src/: container.rs  host.rs  lib.rs  probe.rs  process.rs  prometheus.rs  self_watcher.rs  session.rs
crates/collectors/tests/fixtures/: openclaw_prometheus.txt
crates/domain/: Cargo.toml
crates/domain/src/: enrich.rs  lib.rs  policy.rs  ports.rs  signal.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs  otlp.rs  stdout.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/tests/: crash.rs
deploy/signoz/: README.md
deploy/signoz/dashboards/: harnesssphere-host.json
harnesssphere/: Cargo.toml
harnesssphere/src/: config.rs  main.rs
