[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/runtime",
    "crates/collectors",
    "crates/export",
    "harnesssphere",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
harnesssphere-domain = { path = "crates/domain" }
harnesssphere-runtime = { path = "crates/runtime" }
harnesssphere-collectors = { path = "crates/collectors" }
harnesssphere-export = { path = "crates/export" }

async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.39"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"

# Release: lean binary. panic = "unwind" (default) is kept on purpose — resilience
# via catch_unwind (FR-RES-03) depends on it.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
