[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/runtime",
    "crates/collectors",
    "crates/export",
    "crates/ingest",
    "harnesssphere",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LepistaBioinformatics/harness-sphere"

[workspace.dependencies]
# `version` is required (alongside `path`) so the crates are publishable to crates.io.
# `cargo set-version` keeps these in sync with the package version on release.
harnesssphere-domain = { path = "crates/domain", version = "0.2.0" }
harnesssphere-runtime = { path = "crates/runtime", version = "0.2.0" }
harnesssphere-collectors = { path = "crates/collectors", version = "0.2.0" }
harnesssphere-export = { path = "crates/export", version = "0.2.0" }
harnesssphere-ingest = { path = "crates/ingest", version = "0.2.0" }

async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.39"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"

# Release: lean binary. panic = "unwind" (default) is kept on purpose — resilience
# via catch_unwind (FR-RES-03) depends on it.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
