[package]
name = "harnesssphere"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified single-binary OpenTelemetry watcher for host, container, gateway and AI (Claw/Harness) telemetry."
default-run = "harnesssphere"

[[bin]]
name = "harnesssphere"
path = "src/main.rs"

[features]
default = []
otlp = ["harnesssphere-export/otlp"]
ingest = ["dep:harnesssphere-ingest"]

[dependencies]
harnesssphere-domain.workspace = true
harnesssphere-runtime.workspace = true
harnesssphere-collectors.workspace = true
harnesssphere-export.workspace = true
harnesssphere-ingest = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
