[package]
name = "harnesssphere-collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Critical collectors (host, self) are always compiled. Optional ones sit behind a feature.
default = []
container = []
prometheus = []

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
sysinfo.workspace = true
tracing.workspace = true
