[package]
name = "harnesssphere-collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HarnessSphere source collectors (host, self) for the telemetry pipeline."

[features]
# Critical collectors (host, self) are always compiled. Optional ones sit behind a feature.
default = []
container = []
prometheus = []

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["net", "time", "fs", "io-util"] }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = "3"
