[package]
name = "harnesssphere-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HarnessSphere domain: canonical telemetry signal model, ports and pure policies."

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
