[package]
name = "harnesssphere-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Adapter OTLP — confina as crates `opentelemetry*` (pré-1.0) aqui.
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
tracing.workspace = true

opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["metrics", "grpc-tonic"], optional = true }
