[package]
name = "harnesssphere-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HarnessSphere exporters (stdout, OTLP) for the telemetry pipeline."

[features]
default = []
# OTLP adapter — confines the `opentelemetry*` crates (pre-1.0) here.
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-proto", "dep:tonic"]

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
tracing.workspace = true

opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["metrics", "grpc-tonic"], optional = true }
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "trace"], optional = true }
tonic = { version = "0.14", optional = true }
