[package]
name = "harnesssphere-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HarnessSphere ingest plane: local OTLP receiver with host enrichment."

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tonic = "0.14"
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "metrics"] }
