[package]
name = "harnesssphere-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
harnesssphere-domain.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["test-util"] }
